<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.signupapplication.SignUpSharedViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clipChildren="false"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/header_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/profile_creation"
                android:textStyle="bold"
                android:textSize="@dimen/header_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sub_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/header_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_title"
                android:text="@string/sub_header_text"
                android:textSize="@dimen/subheader_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/first_name_id"
                app:layout_constraintTop_toBottomOf="@+id/sub_header_text"
                app:shapeAppearance="@style/Rounded"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:errorEnabled="true"
                android:layout_marginTop="@dimen/header_padding"
                android:layout_marginStart="@dimen/generic_padding"
                android:layout_marginEnd="@dimen/generic_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_name_text"
                    android:text="@{vm.getRegisteredUser().firstName}"
                    android:hint="@string/first_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/email_id"
                app:layout_constraintTop_toBottomOf="@+id/first_name_id"
                app:shapeAppearance="@style/Rounded"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:errorEnabled="true"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginStart="@dimen/generic_padding"
                android:layout_marginEnd="@dimen/generic_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_address_text"
                    android:text="@{vm.getRegisteredUser().email}"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/password_id"
                app:layout_constraintTop_toBottomOf="@+id/email_id"
                app:shapeAppearance="@style/Rounded"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:errorEnabled="true"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginStart="@dimen/generic_padding"
                android:layout_marginEnd="@dimen/generic_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_text"
                    android:text="@{vm.getRegisteredUser().password}"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/website_id"
                app:layout_constraintTop_toBottomOf="@+id/password_id"
                app:shapeAppearance="@style/Rounded"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:errorEnabled="true"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginStart="@dimen/generic_padding"
                android:layout_marginEnd="@dimen/generic_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/website_text"
                    android:text="@{vm.getRegisteredUser().webSite}"
                    android:hint="@string/website"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/generic_padding"
                android:layout_marginEnd="@dimen/generic_padding"
                android:backgroundTint="#EF5B29"
                android:padding="@dimen/default_padding"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website_id"
                app:layout_constraintVertical_bias="0.722" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>