<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.signupapplication.SignUpSharedViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/header_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/name_header"
                tools:text="Hello, Audrey!"
                android:typeface="serif"
                android:textStyle="bold"
                android:textSize="@dimen/header_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sub_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/header_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_title"
                android:text="@string/confirmation_subheader_text"
                android:textSize="@dimen/subheader_text_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/website_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/header_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autoLink="web"
                app:layout_constraintTop_toBottomOf="@+id/sub_header_text"
                tools:text="amccoy8831.com"
                android:textSize="@dimen/subheader_text_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/header_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website_id"
                android:visibility="@{vm.isVisible()}"
                tools:text="Audrey"
                android:textSize="@dimen/subheader_text_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="@dimen/header_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_id"
                tools:text="ammcoy9831@hotmail.com"
                android:textSize="@dimen/subheader_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/generic_padding"
                android:layout_marginEnd="@dimen/generic_padding"
                android:backgroundTint="#EF5B29"
                android:text="@string/signin"
                android:padding="@dimen/default_padding"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_id"
                app:layout_constraintVertical_bias="0.87" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>